# ritual

./: AGENTS.md  README.md  package-lock.json  package.json
.github/workflows/: macos-release.yml
scripts/: build-macos-release.mjs
src/: App.tsx  clui-shim.ts  index.css  main.tsx  theme.ts  types.ts
src-tauri/: .env.example  Cargo.toml  build.rs  get_profiles.ps1  tauri.conf.json  temp_profile_finder.ps1
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  connectors.rs  lib.rs  main.rs  onboarding.rs  runtime_config.rs  tools.rs  types.rs
src-tauri/src/browser/: accessibility.rs  actions.rs  commands.rs  mod.rs  wait.rs
src-tauri/src/safety/: classifier.rs  mod.rs  plan.rs  scope.rs  undo.rs
src/components/: ApiKeyGate.tsx  AttachmentChips.tsx  ConnectorsPanel.tsx  ConversationView.tsx  EventFeed.tsx  EventItem.tsx  HistoryPicker.tsx  InputBar.tsx  MarketplacePanel.tsx  OnboardingExperience.tsx  Overlay.tsx  PermissionCard.tsx  PermissionDeniedCard.tsx  PlanApprovalPanel.tsx  ScopeSettings.tsx  SettingsPopover.tsx  SlashCommandMenu.tsx  StatusBar.tsx  TabStrip.tsx
src/hooks/: useAgent.ts  useClaudeEvents.ts  useHealthReconciliation.ts
src/store/: agent.ts
src/stores/: sessionStore.ts
